<resources>
    <string name="app_name">Gestante: Autocuidado da P.A.</string>
    <string name="navigation_drawer_open">Abrir a gaveta de navegação</string>
    <string name="navigation_drawer_close">Fechar a gaveta de navegação</string>
    <string name="texto_action_manutencao_cadastro">Cadastro</string>
    <string name="texto_titulo_splash">Gestante: autocuidado da pressão arterial</string>
    <string name="texto_cadastro_nome">Qual o seu nome?</string>
    <string name="texto_cadastro_data_menstruacao">Data da última menstruação?</string>
    <string name="texto_cadastro_data_ultrasom">Data da primeira ultrassom?</string>
    <string name="texto_cadastro_quant_semanas">Quantas semanas?</string>
    <string name="texto_cadastro_valida_nome">Informe seu nome</string>
    <string name="texto_cadastro_valida_menstruacao">Informe data completa de sua última menstruação</string>
    <string name="texto_cadastro_valida_ultrassom">Informe data completa do primeiro exame de ultrassom</string>
    <string name="texto_cadastro_valida_data">Informe uma data válida</string>
    <string name="texto_sucesso_cadastro">Cadastro concluído!</string>
    <string name="texto_erro_cadastro">Problema ao cadastrar informações!</string>
    <string name="texto_menu_opcao_1">Para saber mais</string>
    <string name="texto_menu_opcao_2">O que é hipertensão e sídrome hipertensiva gestacional?</string>
    <string name="texto_menu_opcao_3">O que você deve saber antes de aferir sua pressão arterial</string>
    <string name="texto_menu_opcao_4">Como você deve se preparar</string>
    <string name="texto_menu_opcao_5">O que você deve observar no momento da aferição pelo profissional?</string>
    <string name="texto_menu_opcao_6">Como aferir a pressão arterial com o aparelho digital</string>
    <string name="texto_menu_opcao_7">Diário da pressão arterial</string>
    <string name="texto_menu_opcao_8">Planilha com todas as pa´s já registradas e dia</string>
    <string name="texto_menu_opcao_9">Exercício físico na gravidez</string>
    <string name="texto_menu_opcao_10">Alimentação saudável na gravidez</string>
    <string name="texto_menu_opcao_11">Galeria de fotos da sua gravidez</string>
    <string name="texto_botao_afericao_pa">Cadastrar Aferição da P.A.</string>
    <string name="texto_botao_registro_afericao_pa">Salvar no Diário</string>
    <string name="texto_botao_obter_foto">Adquirir Foto</string>
    <string name="texto_botao_incluir_foto">Salvar no Álbum</string>
    <string name="texto_botao_galeria">Galeria de Fotos</string>
    <string name="texto_hint_fotografia">Descreva sua fotografia</string>
    <string name="texto_hint_sistolica">Sistólica</string>
    <string name="texto_hint_diastolica">Diastólica</string>
    <string name="texto_hint_datahora">Data/Hora</string>
    <string name="texto_nav_camera">Fotos da Gravidez</string>
    <string name="texto_nav_diario">Cadastro da P.A.</string>
    <string name="texto_nav_gallery">Galeria de Fotos</string>
    <string name="texto_nav_slideshow">SlideShow</string>
    <string name="texto_nav_share">Compartilhar</string>
    <string name="texto_nav_menu_share">Indicar</string>
    <string name="texto_legenda_item_galeria_vazia">Você ainda não cadastrou suas fotos do período da gravidez!</string>
    <string name="texto_saldacao_nome">mamãe!</string>
    <string name="texto_saldacao">Bem-vinda, mamãe!</string>
    <string name="texto_share_compat">Compartilhar com</string>
    <string name="texto_versao_app">Versão </string>
    <string name="texto_valida_campo_pas">Informe o valor da sistólica</string>
    <string name="texto_valida_campo_pad">Informe o valor da diastólica</string>
    <string name="texto_valida_campo_valor_pas">Informe o valor com 3 dígitos, ex: 120</string>
    <string name="texto_valida_campo_valor_pad">Informe o valor com 2 dígitos, ex: 80</string>
    <string name="texto_botao_dialogo_planilha">Visualizar Planilha</string>
    <string name="texto_botao_dialogo_menu">Menu</string>
    <string name="texto_html_processamento">Carregando...</string>
    <string name="texto_html_titulo_dialogo_erro">Erro inesperado!</string>
    <string name="texto_html_titulo_dialogo_pa_normal">Parabéns!</string>
    <string name="texto_html_titulo_dialogo_pa_anormal">Alerta!</string>
    <string name="texto_html_botao">Fechar</string>
    <string name="texto_aviso_cadastro_foto">Adicione uma fotografia</string>
    <string name="texto_cadastro_opcao_camera">Tirar nova foto</string>
    <string name="texto_cadastro_opcao_imagens">Selecionar foto existente</string>
    <string name="texto_botao_dialogo_cancela">Cancelar</string>
    <string name="texto_botao_dialogo_titulo">Opções de foto</string>
    <string name="texto_aviso_permissao_camera">Erro de permissão da câmera</string>
    <string name="texto_aviso_camera_ausente">Nenhuma câmera encontrada neste dispositivo!</string>
    <string name="texto_nome_local">Gestante</string>
    <string name="texto_aviso_erro_processo_imagem">Erro ao carregar foto, selecione uma imagem menor.</string>
    <string name="texto_aviso_erro_aquisicao_imagem">Nenhuma imagem adquirida.</string>
    <string name="texto_aviso_erro_sistema_desatualizado">Impossível obter imagem, atualize o sistema!</string>
    <string name="texto_aviso_nao_cadastrado">Cadastro inexistente!</string>
    <string name="texto_sobre_app">Sobre o Aplicativo</string>
    <string name="texto_introducao"><![CDATA[
                                    Este aplicativo foi criado especialmente para você que aguarda seu bebê e deve realizar todos os cuidados necessários para possuir uma gestação saudável e um parto sem complicações.
                                    Nossa plataforma móvel foi criada com o intuito de promover o autocuidado das gestantes quanto ao controle da sua pressão arterial.
                                    <br /><br />
                                    Ela oferece ferramentas que:
                                    <br />
                                    permitem o registro e arquivo dos valores de PA´s aferidas, apresentando informações sobre o que aquele valor indica;
                                    dicas de como manter ou melhorar os valores de sua PA;
                                    instruções quanto a alimentação na gravidez e exercícios físicos.
                                    <br /><br />
                                    A plataforma também dispõe de um espaço para as mamãe arquivarem fotos de todos os períodos da gestação, o que torna o uso mais divertido.
                                    ]]>
    </string>
    <string name="texto_opcao_1"><![CDATA[
                                <b>Você sabe o que é pressão arterial?</b>
                                <br /><br />
                                <font color=#5d353b size=3><b>A pressão arterial, ao contrário do que muitos pensam, não é algo ruim, mas sim um mecanismo necessário para manter o sangue circulando no organismo.</b></font>
                                <br /><br />
                                <b>1</b>. O nosso coração funciona como uma bomba contrátil, que a cada batida leva o sangue para as nossas artérias.
                                ]]>
    </string>
    <string name="texto_opcao_1_2"><![CDATA[
                                <b>2</b>. As paredes dessas artérias são elásticas, e se esticam e relaxam a fim de ¨empurrar¨  o sangue para frente e mantê-lo circulando por todas as partes do organismo.
                                ]]>
    </string>
    <string name="texto_opcao_1_3"><![CDATA[
                                <b>3</b>. Desta forma, o nosso sangue irá chegar as periferias do nosso corpo, como os pés, braços e mãos por exemplo.
                                <br />A força do sangue contra a parede dessas artérias é que gera a pressão arterial.
                                <br />A pressão arterial deve-se manter em níveis normais para garantir a circulação adequada do sangue no corpo, entretanto, se esta apresenta-se com níveis muito elevados pode causar a hipertensão (pressão alta).
                                ]]>
    </string>
    <string name="texto_opcao_2"><![CDATA[
                                <b>Hipertensão</b>
                                <br />Você já deve ter ouvido falar bastante em pressão alta/hipertensão e essa doença é descoberta com a verificação da pressão arterial e com os resultados de valores absolutos de PA sistólica > 140 mmHg e/ou diastólica de > 90mmHg, também chamado de pressão 14 por 9.
                                A Hipertensão na gravidez pode oferecer riscos a mãe e ao bebê, como o desenvolvimento de doenças, agravos e mortalidade.
                                <br /><br />
                                <b>Síndrome Hipertensiva Gestacional</b>
                                <br />A gravidez pode induzir a hipertensão em mulheres que antes tinham sua pressão com valores normais ou agravar uma hipertensão existente antes da gravidez, assim, sendo chamadas de síndrome hipertensiva gestacional.
                                A hipertensão arterial na gestação é classificada em:
                                <br /><br /><b>Hipertensão crônica:</b> hipertensão diagnosticada antes da gravidez ou descoberta até 20 semanas de gravidez ou depois de doze semanas do parto.
                                <br /><br /><b>Hipertensão gestacional:</b> aumento da pressão arterial que ocorre após a 20ª semana de gestação.
                                <br /><br /><b>Pré-eclâmpsia:</b> aparecimento de hipertensão (pressão alta) e Proteinúria (proteína na urina), após 20 semanas de gestação, em gestante que tinha a pressão normal antes de engravidar.
                                <br /><br /><b>Eclâmpsia:</b> corresponde à pré-eclâmpsia complicada, assim, aparecem convulsões ou até mesmo coma.
                                <br /><br /><b>Pré-eclâmpsia superposta à hipertensão crônica:</b> é definida pelo aumento agudo da PA, à qual se agregam proteinúria (proteína na urina), trombocitopenia (diminuição na quantidade de plaquetas, elemento presente no sangue)
                                ou anormalidades da função hepática (fígado) em gestantes com hipertensão crônica e com mais de 20 semanas de gravidez.
                                ]]>
    </string>
    <string name="texto_opcao_3"><![CDATA[
                                <font color=#5d353b size=4><b>ALERTA:</b></font><font color=#5d353b size=3>É muito importante você saber como se preparar para aferição da sua PA, para evitar a possibilidade de apresentação de valores errados, que podem levar você a realizar tratamentos desnecessários.</font>
                                ]]>
    </string>
    <string name="texto_opcao_4"><![CDATA[
                                <b>1</b>. Fique em repouso de 3 a 5 minutos antes de verificar e não conversar durante a medição.</font>
                                <br /><br />
                                <b>2</b>. Certificar-se de que:
                                <br />&raquo; Não está com a bexiga cheia (não está com vontade de fazer xixi);
                                <br /><br />&raquo; Não praticou exercícios físicos 60 minutos antes da medição;
                                <br /><br />&raquo; Não ingeriu bebidas alcoólicas, café ou alimentos estimulantes;
                                <br /><br />&raquo; Não fumou nos 30 minutos anteriores.
                                <br /><br />
                                <b>3</b>. Posicionamento:
                                <br />&raquo; Ficar sentada, com pernas descruzadas, pés apoiados no chão, costas encostadas na cadeira e relaxada;
                                <br /><br />&raquo; O braço deve ficar na altura do peito/coração, apoiado, com a palma da mão voltada para cima e as roupas não devem apertar.
                                ]]>
    </string>
</resources>