<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/bt_saber_mais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_1"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_hipertensao_hipertensiva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_deve_saber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_3"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_como_se_preparar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_4"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_observar_afericao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_5"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_como_aferir_pressao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_6"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_diario_pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_7"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_planilha_pas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_8"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_exercicio_gravidez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_9"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_alimentacao_gravidez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_10"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_galeria_fotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_menu_opcao_11"
        android:textColor="@android:color/white" />

</LinearLayout>