<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/texto_menu_opcao_11"
        android:textColor="@color/titulos"
        android:textSize="@dimen/tamanho_texto_ultra_grande"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_adquirir_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_botao_obter_foto"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="top|center_vertical"
        android:adjustViewBounds="false"
        android:background="@null"
        android:contentDescription="@null"
        android:padding="10dp"
        android:scaleType="fitCenter" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <EditText
            android:id="@+id/txt_descricao_foto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_hint_fotografia"
            android:inputType="text"
            android:textColor="@color/inputs"
            android:textColorHint="@color/hints" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_salvar_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/texto_botao_incluir_foto"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_galeria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape"
        android:text="@string/texto_botao_galeria"
        android:textColor="@android:color/white" />

</LinearLayout>