<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/tamanho_texto_ultra_grande"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/texto_menu_opcao_1"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimaryDisableOnly"
        android:text="@string/texto_opcao_1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        style="?android:textAppearanceMedium" />

    <pl.droidsonroids.gif.GifTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_animacao_coracao"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimaryDisableOnly"
        android:text="@string/texto_opcao_1_2"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        style="?android:textAppearanceMedium" />

    <pl.droidsonroids.gif.GifTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_animacao_arterias"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimaryDisableOnly"
        android:text="@string/texto_opcao_1_3"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        style="?android:textAppearanceMedium" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_mae_feliz_800x1280" />

</LinearLayout>