<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_nome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_cadastro_nome"
            android:inputType="textPersonName"
            android:textColor="@color/inputs"
            android:textColorHint="@color/hints" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_data_menstruacao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_cadastro_data_menstruacao"
            android:inputType="date"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/inputs"
            android:textColorHint="@color/hints" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_data_ultrasom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_cadastro_data_ultrasom"
            android:inputType="date"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/inputs"
            android:textColorHint="@color/hints" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_numero_semanas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_cadastro_quant_semanas"
            android:inputType="number"
            android:textColor="@color/inputs"
            android:textColorHint="@color/hints" />
    </android.support.design.widget.TextInputLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="UselessParent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@android:drawable/ic_menu_save"/>

        <TextView
            android:id="@+id/txt_idade_gestacional"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top|left"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing" />
    </FrameLayout>

</LinearLayout>